examples/test/conf/EdgionTls/grpctls/EndpointSlice.yaml
# EdgionTls gRPC TLS 测试 EndpointSlice
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-grpc-tls-slice
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-grpc-tls
addressType: IPv4
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
ports:
  - name: grpc
    port: 30022
    protocol: TCP
