examples/test/conf/EdgionTls/grpctls/Service.yaml
# EdgionTls gRPC TLS 测试 Service
apiVersion: v1
kind: Service
metadata:
  name: test-grpc-tls
  namespace: edgion-test
spec:
  ports:
    - name: grpc
      port: 30022
      targetPort: 30022
      protocol: TCP
